[package]
name = "retcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.1.0"
clap = { version = "3.2.16", features = ["derive"] }
cursive = { version = "0.19.0", default-features = false, features = ["maplit", "term_size", "crossterm", "crossterm-backend"] }
northstar-rcon-client = "0.2.1"
tokio = { version = "1.20.0", features = ["full"] }

