[package]
name = "retcon"
version = "0.1.0"
edition = "2021"
authors = ["AnActualEmerald"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.1.0"
clap = { version = "3.2.16", features = ["derive"] }
cursive = { version = "0.19.0", default-features = false, features = ["maplit", "term_size", "crossterm", "crossterm-backend"] }
directories = "4.0.1"
northstar-rcon-client = "0.2.1"
ron = "0.7.1"
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }

